# twitter-rs

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: constants.rs  like.rs  main.rs  schema.rs  tweet.rs
