[package]
name = "twitter-rs"
version = "0.1.0"
authors = ["Sasha Prokhorenko <djminikin@gmail.com"]
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.0.0-alpha.1"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
env_logger = "0.9.0"
diesel = { version = "1.4.4", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
